Dropped dependency for SDL2_image, now using libpng to load textures